Adding Code Climate file

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -2,3 +2,8 @@ languages:
   Ruby: true
 exclude_paths:
 - "app/controllers/concerns/*_doc.rb"
+- "public/api"
+- "lib/tasks"
+- "public/coverage"
+- "test"
+- "public/javascripts"
