Configure database example to user postgresql for production

--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -21,5 +21,12 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  # For details on connection pooling, see rails configuration guide
+  # http://guides.rubyonrails.org/configuring.html#database-pooling
+  pool: 5
+  host: [hostname]
+  username: [username]
+  password: [password]
+  database: checkdesk_production
