Updating Code Climate file

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -8,3 +8,6 @@ exclude_paths:
 - "test"
 - "public/javascripts"
 - "lib/sample_data.rb"
+- "app/controllers/*.rb"
+paths:
+- "app/controllers/application_controller.rb"
