--- a/config/config.yml.example
+++ b/config/config.yml.example
@@ -13,6 +13,7 @@ development: &default
   graphql_debug: true
   checkdesk_client: http://localhost:3333
   terms_of_service: 'Your content of TOS'
+  allow_duplicated_urls: false
 
 test:
   <<: *default
