--- a/config/config.yml.example
+++ b/config/config.yml.example
@@ -14,6 +14,11 @@ development: &default
   checkdesk_client: http://localhost:3333
   terms_of_service: 'Your content of TOS'
   allow_duplicated_urls: false
+  default_mail: root@localhost
+  checkdesk_base_url: http://localhost:3000
+  gmail_username: # In order to use GMail's SMTP
+  gmail_password: # In order to use GMail's SMTP
+  send_welcome_email_on_registration: true
 
 test:
   <<: *default
