--- a/config/config.yml.example
+++ b/config/config.yml.example
@@ -11,14 +11,14 @@ development: &default
   elasticsearch_port: 9200
   elasticsearch_log: true
   graphql_debug: true
-  checkdesk_client: http://localhost:3333
+  checkdesk_client: http://web:3333
   terms_of_service: 'Your content of TOS'
   allow_duplicated_urls: false
   default_mail: root@localhost
   checkdesk_base_url: http://localhost:3000
   gmail_username: # In order to use GMail's SMTP
   gmail_password: # In order to use GMail's SMTP
-  send_welcome_email_on_registration: true
+  send_welcome_email_on_registration: false
 
 test:
   <<: *default
