--- a/config/config.yml.example
+++ b/config/config.yml.example
@@ -11,7 +11,7 @@ development: &default
   elasticsearch_port: 9200
   elasticsearch_log: true
   graphql_debug: true
-  checkdesk_client: http://web:3333
+  checkdesk_client: http://localhost:3333
   terms_of_service: 'Your content of TOS'
   allow_duplicated_urls: false
   default_mail: root@localhost
