--- a/config/config.yml.example
+++ b/config/config.yml.example
@@ -5,6 +5,8 @@ development: &default
   twitter_consumer_secret:
   facebook_app_id:
   facebook_app_secret:
+  slack_app_id:
+  slack_app_secret:
   pender_host: http://pender:3200
   pender_key: dev
   elasticsearch_host: elasticsearch
@@ -26,4 +28,4 @@ test:
 
 production:
   <<: *default
-  
+
