Tickets #4917 and #4945: Fixing tests, improving code quality and updating Dockerfile

--- a/production/Dockerfile
+++ b/production/Dockerfile
@@ -12,6 +12,10 @@ ENV RAILS_ENV production
 ENV GITREPO git@github.com:meedan/checkdesk-api.git
 ENV APP checkdesk-api
 
+#
+# DEPENDENCIES
+#
+RUN apt-get update -qq && apt-get install -y imagemagick
 
 #
 # APP CONFIG
