--- a/config/config.yml.example
+++ b/config/config.yml.example
@@ -22,6 +22,10 @@ development: &default
   gmail_password: # In order to use GMail's SMTP
   send_welcome_email_on_registration: false
   elasticsearch_index:
+  amazon_ses_host: # In order to use Amazon SES SMTP
+  amazon_ses_port: # In order to use Amazon SES SMTP
+  amazon_ses_username: # In order to use Amazon SES SMTP
+  amazon_ses_password: # In order to use Amazon SES SMTP
 
 test:
   <<: *default
