--- a/config/config.yml.example
+++ b/config/config.yml.example
@@ -15,6 +15,7 @@ development: &default
   graphql_debug: true
   checkdesk_client: http://localhost:3333
   terms_of_service: 'Your content of TOS'
+  privacy_policy: 'Your content of privacy policy'
   allow_duplicated_urls: false
   default_mail: root@localhost
   checkdesk_base_url: http://localhost:3000
