sed the DEPLOYUSER into nginx config

--- a/production/Dockerfile
+++ b/production/Dockerfile
@@ -24,6 +24,8 @@ RUN apt-get install -y imagemagick
 
 # nginx for checkdesk-api
 COPY production/nginx.conf /etc/nginx/sites-available/${APP}
+# swap in DEPLOYUSER
+RUN sed -i "s/DEPLOYUSER/${DEPLOYUSER}/g" /etc/nginx/sites-available/${APP}
 RUN ln -s /etc/nginx/sites-available/${APP} /etc/nginx/sites-enabled/${APP}
 RUN rm /etc/nginx/sites-enabled/default
 
@@ -33,7 +35,6 @@ RUN rm /etc/nginx/sites-enabled/default
 #
 
 RUN useradd ${DEPLOYUSER} -s /bin/bash -m
-RUN chown -R ${DEPLOYUSER}:${DEPLOYUSER} /home/${DEPLOYUSER}
 
 #
 # code deployment
