--- a/production/nginx.conf
+++ b/production/nginx.conf
@@ -3,8 +3,8 @@ server {
      root /app/current/public;
      try_files $uri $uri/index.html @passenger;
      location @passenger {
-       passenger_user cddeploy;
-	    passenger_group cddeploy;
+       passenger_user DEPLOYUSER;
+	    passenger_group DEPLOYUSER;
        passenger_enabled on;
      }
 }
