--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,14 @@
 language: ruby
 services:
 - elasticsearch
+- postgresql
 bundler_args: "--jobs 3 --retry 3 --without nothing"
 before_script:
 - sleep 10
 - cp config/config.yml.example config/config.yml
 - cp config/database.yml.example config/database.yml
 - cp config/initializers/secret_token.rb.example config/initializers/secret_token.rb 
+- cp config/database.yml.travis config/database.yml
 - RAILS_ENV=test bundle exec rake db:drop
 - RAILS_ENV=test bundle exec rake db:migrate
 script: bundle exec rake test:coverage
