--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_script:
 - cp config/database.yml.example config/database.yml
 - cp config/initializers/secret_token.rb.example config/initializers/secret_token.rb 
 - cp config/database.yml.travis config/database.yml
+- psql -c 'create database travis_ci_test;' -U postgres
 - RAILS_ENV=test bundle exec rake db:migrate
 script: bundle exec rake test:coverage
 rvm:
