--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: ruby
 services:
 - elasticsearch
 - postgresql
+addons:
+  postgresql: "9.4"
 bundler_args: "--jobs 3 --retry 3 --without nothing"
 before_script:
 - sleep 10
