--- a/config/config.yml.example
+++ b/config/config.yml.example
@@ -22,10 +22,10 @@ development: &default
   send_welcome_email_on_registration: false
   elasticsearch_index:
   # smtp mail settings
-  smtp_host: # smtp.gmail.com (google's default)
-  smtp_port: # 587 (google's default)
-  smtp_user: # usually your gmail account
-  smtp_pass: # usually your gmail account password
+  smtp_host: smtp.gmail.com # (google's default)
+  smtp_port: 587 # (google's default)
+  smtp_user: user@host.com # usually your gmail account
+  smtp_pass: 123456 # usually your gmail account password
 
 test:
   <<: *default
