--- a/config/config.yml.example
+++ b/config/config.yml.example
@@ -13,8 +13,7 @@ development: &default
   elasticsearch_port: 9200
   elasticsearch_log: false
   graphql_debug: true
-  # checkdesk_client: http://localhost:3333
-  checkdesk_client: '^https?:\/\/[a-zA-Z0-9\-]*\.?localhost:.*'
+  checkdesk_client: http://localhost:3333
   terms_of_service: 'Your content of TOS'
   privacy_policy: 'Your content of privacy policy'
   allow_duplicated_urls: false
