Ticket #5156: Implementing a CheckdeskNotifications::Pusher library and sending a notification when a ProjectMedia object is created

--- a/config/config.yml.example
+++ b/config/config.yml.example
@@ -26,6 +26,9 @@ development: &default
   smtp_port: 587 # (google's default)
   smtp_user: user@host.com # usually your gmail account
   smtp_pass: 123456 # usually your gmail account password
+  pusher_app_id:
+  pusher_key:
+  pusher_secret:
 
 test:
   <<: *default
