--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ db/schema.rb
 /tmp/sockets
 config/database.yml
 config/config.yml
+config/sidekiq.yml
 config/initializers/errbit.rb
 config/initializers/secret_token.rb
 *.sw*
