Adding more enginers to Code Climate

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -8,6 +8,14 @@ engines:
       strings:
       - FIXME
       - BUG
+   rubocop:
+     enabled: true
+   brakeman:
+     enabled: true
+   duplication:
+     enabled: true
+   bundler-audit:
+     enabled: true
 exclude_paths:
 - "app/controllers/concerns/*_doc.rb"
 - "public/api"
