set PRODUCT env var

--- a/production/Dockerfile
+++ b/production/Dockerfile
@@ -11,6 +11,7 @@ ENV DEPLOYUSER=checkdeploy \
     DEPLOYDIR=/app \
     RAILS_ENV=production \
     GITREPO=git@github.com:meedan/check-api.git \
+    PRODUCT=check \    
     APP=check-api
 
 #
