--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -10,6 +10,8 @@ engines:
       - BUG
   rubocop:
     enabled: true
+    AllCops:
+      TargetRubyVersion: 2.3
   brakeman:
     enabled: true
   duplication:
