Trying to tell Code Climate to use Ruby 2.3

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -10,8 +10,7 @@ engines:
       - BUG
   rubocop:
     enabled: true
-    AllCops:
-      TargetRubyVersion: 2.3
+    config: .rubocop.yml
   brakeman:
     enabled: true
   duplication:
