Use ES 2.4.1 on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ services:
 - elasticsearch
 - postgresql
 before_install:
-- curl -O https://download.elasticsearch.org/elasticsearch/elasticsearch/elasticsearch-2.4.1.deb && sudo dpkg -i --force-confnew elasticsearch-2.4.1.deb && sudo service elasticsearch restart
+- sudo apt-get -qq update
+- sudo apt-get install wget
+- wget https://download.elasticsearch.org/elasticsearch/elasticsearch/elasticsearch-2.4.1.deb && sudo dpkg -i --force-confnew elasticsearch-2.4.1.deb && sudo service elasticsearch restart
 addons:
   postgresql: '9.4'
   code_climate:
