Ticket #5590: Adding new configurations

--- a/config/config.yml.example
+++ b/config/config.yml.example
@@ -29,6 +29,13 @@ development: &default
   pusher_app_id:
   pusher_key:
   pusher_secret:
+  uploaded_file_max_size:
+  image_min_width:
+  image_max_width:
+  image_min_height:
+  image_max_height:
+  image_embed_size:
+  image_thumbnail_size:
 
 test:
   <<: *default
