--- a/config/config.yml.example
+++ b/config/config.yml.example
@@ -36,6 +36,7 @@ development: &default
   image_max_height:
   image_embed_size:
   image_thumbnail_size:
+  clamav_service_path:
 
 test:
   <<: *default
