set passenger_app_env to RAILS_ENV

--- a/production/config/nginx/app.conf
+++ b/production/config/nginx/app.conf
@@ -4,10 +4,10 @@ server {
      try_files $uri $uri/index.html @passenger;
      location @passenger {
        passenger_user DEPLOYUSER;
-	    passenger_group DEPLOYUSER;
+       passenger_group DEPLOYUSER;
        passenger_enabled on;
      }
-
+     passenger_app_env ddRAILS_ENVdd;
      passenger_min_instances 6;
           
 }
