#5590 set client_max_body_size to 0

--- a/production/config/nginx/app.conf
+++ b/production/config/nginx/app.conf
@@ -9,5 +9,7 @@ server {
      }
      passenger_app_env ddRAILS_ENVdd;
      passenger_min_instances 6;
-          
+
+     # disable any limits to avoid HTTP 413 for large image uploads
+     client_max_body_size 0; 
 }
