--- a/production/config/nginx/app.conf
+++ b/production/config/nginx/app.conf
@@ -11,5 +11,5 @@ server {
      passenger_min_instances 6;
 
      # disable any limits to avoid HTTP 413 for large image uploads
-     client_max_body_size 0; 
+     client_max_body_size 4M; 
 }
