Ticket #5473: Fixing Code Climate issue

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -11,6 +11,8 @@ engines:
   rubocop:
     enabled: true
     config: .rubocop.yml
+    exclude_fingerprints:
+    - c46545507dd9c0ee0b06ade73f99824e
   brakeman:
     enabled: true
     exclude_fingerprints:
