Include stock Rails localizations + localize image size validation error #5802

--- a/config/environments/production.rb.example
+++ b/config/environments/production.rb.example
@@ -68,6 +68,9 @@ Rails.application.configure do
   # the I18n.default_locale when a translation cannot be found).
   config.i18n.fallbacks = true
 
+  # https://github.com/svenfuchs/rails-i18n#configuration
+  config.i18n.available_locales = [:fr, :ar, :pt]
+
   # Send deprecation notices to registered listeners.
   config.active_support.deprecation = :notify
 
@@ -77,4 +80,5 @@ Rails.application.configure do
   # Do not dump schema after migrations.
   config.active_record.dump_schema_after_migration = false
   config.assets.compile = true
+
 end
