--- a/config/environments/production.rb.example
+++ b/config/environments/production.rb.example
@@ -69,7 +69,7 @@ Rails.application.configure do
   config.i18n.fallbacks = true
 
   # https://github.com/svenfuchs/rails-i18n#configuration
-  config.i18n.available_locales = [:fr, :ar, :pt]
+  config.i18n.available_locales = [:en, :fr, :ar, :pt]
 
   # Send deprecation notices to registered listeners.
   config.active_support.deprecation = :notify
