Ticket #5653: Get source language from Alegre and save as annotation

--- a/config/config.yml.example
+++ b/config/config.yml.example
@@ -40,6 +40,8 @@ development: &default
   transifex_user:
   transifex_password:
   locale:
+  alegre_host:
+  alegre_token:
 
 test:
   <<: *default
