--- a/config/config.yml.example
+++ b/config/config.yml.example
@@ -43,6 +43,8 @@ development: &default
   alegre_host:
   alegre_token:
   viber_token:
+  bridge_reader_host_private: # http://localhost:3001 - used to download screenshot
+  bridge_reader_host_public: # http://localhost:3001 - used to publish
 
 test:
   <<: *default
