Ticket #6057: Replace `app_name`to `product_name`

--- a/config/config.yml.example
+++ b/config/config.yml.example
@@ -44,7 +44,7 @@ development: &default
   bridge_reader_url_private: # http://localhost:3001 - used to download screenshot
   bridge_reader_url: # http://localhost:3001 - used to publish
   keep_token:
-  app_name: "Check"
+  product_name: "Check"
 
 test:
   <<: *default
