Ticket #4846: Adding an oEmbed endpoint that works for all media types (pending the HTML)

--- a/config/config.yml.example
+++ b/config/config.yml.example
@@ -45,6 +45,7 @@ development: &default
   bridge_reader_url: # http://localhost:3001 - used to publish
   keep_token:
   app_name: "Check"
+  app_url: "http://checkmedia.org"
 
 test:
   <<: *default
