--- a/config/config.yml.example
+++ b/config/config.yml.example
@@ -45,6 +45,7 @@ development: &default
   bridge_reader_url: # http://localhost:3001 - used to publish
   keep_token:
   app_name: "Check"
+  support_email: "check@meedan.com"
 
 test:
   <<: *default
