Ticket #4846: Make sure that project media is updated when annotation is saved/destroyed and clear Pender cache and upstream caches in background when project media is updated

--- a/config/config.yml.example
+++ b/config/config.yml.example
@@ -47,6 +47,9 @@ development: &default
   app_name: "Check"
   app_url: "http://checkmedia.org"
   support_email: "check@meedan.com"
+  cc_deville_host:
+  cc_deville_token:
+  cc_deville_httpauth:
 
 test:
   <<: *default
