Ticket #6038: Splitting pender_host config into pender_url and pender_url_private

--- a/config/config.yml.example
+++ b/config/config.yml.example
@@ -7,7 +7,8 @@ development: &default
   facebook_app_secret: test
   slack_app_id: 123456
   slack_app_secret: test
-  pender_host: http://localhost:3005
+  pender_url: http://localhost:3005
+  pender_url_private: http://localhost:3005
   pender_key: test
   elasticsearch_host: 127.0.0.1
   elasticsearch_port: 9200
@@ -54,7 +55,8 @@ development: &default
 
 test:
   <<: *default
-  pender_host: http://pender.test:13200
+  pender_url: http://pender.test:13200
+  pender_url_private: http://pender.test:13200
   pender_key: test
   alegre_host: http://alegre.test:13100
   alegre_token: test
