--- a/config/config.yml.example
+++ b/config/config.yml.example
@@ -52,6 +52,7 @@ development: &default
   cc_deville_host:
   cc_deville_token:
   cc_deville_httpauth:
+  google_analytics_code: # Format: 'UA-000000000-1' 
 
 test:
   <<: *default
