#6219 return 404 for `/test` unless RAILS_ENV=test

--- a/production/config/nginx/app.conf
+++ b/production/config/nginx/app.conf
@@ -16,6 +16,9 @@ server {
      # the env var is fed to the app so it can provide an error message at the same limit
      client_max_body_size 4M;
      passenger_env_var MAX_UPLOAD_SIZE 4M;
+
+     # don't allow `/test` unless RAILS_ENV is set to 'test'
+     include /etc/nginx/sites-available/test_404.conf;
 }
 
 # the following is effectively in the nginx `http` block
