--- a/config/core_statuses.yml
+++ b/config/core_statuses.yml
@@ -5,49 +5,69 @@ MEDIA_CORE_VERIFICATION_STATUSES:
     :id: undetermined
     :label: "<%= I18n.t(:'statuses.media.undetermined.label') %>"
     :style:
+        :backgroundColor: "#518FFF"
+        :color: "#518FFF"
   -
     :description: "<%= I18n.t(:'statuses.media.not_applicable.description') %>"
     :id: not_applicable
     :label: "<%= I18n.t(:'statuses.media.not_applicable.label') %>"
     :style:
+        :backgroundColor: "#9e9e9e"
+        :color: "#9e9e9e"
   -
     :description: "<%= I18n.t(:'statuses.media.in_progress.description') %>"
     :id: in_progress
     :label: "<%= I18n.t(:'statuses.media.in_progress.label') %>"
     :style:
+        :backgroundColor: "#ffbb5d"
+        :color: "#efac51"
   -
     :description: "<%= I18n.t(:'statuses.media.not_true.description') %>"
     :id: "false"
     :label: "<%= I18n.t(:'statuses.media.not_true.label') %>"
     :style:
+        :backgroundColor: "#f04747"
+        :color: "#f04747"
   -
     :description: "<%= I18n.t(:'statuses.media.verified.description') %>"
     :id: verified
     :label: "<%= I18n.t(:'statuses.media.verified.label') %>"
     :style:
+        :backgroundColor: "#72d18d"
+        :color: "#5cae73"
 SOURCE_CORE_VERIFICATION_STATUSES:
   -
     :description: "<%= I18n.t(:'statuses.source.undetermined.description') %>"
     :id: undetermined
     :label: "<%= I18n.t(:'statuses.source.undetermined.label') %>"
     :style:
+        :backgroundColor: "green"
+        :color: "orange"
   -
     :description: "<%= I18n.t(:'statuses.source.credible.description') %>"
     :id: credible
     :label: "<%= I18n.t(:'statuses.source.credible.label') %>"
     :style:
+        :backgroundColor: "green"
+        :color: "orange"
   -
     :description: "<%= I18n.t(:'statuses.source.not_credible.description') %>"
     :id: not_credible
     :label: "<%= I18n.t(:'statuses.source.not_credible.label') %>"
     :style:
+        :backgroundColor: "green"
+        :color: "orange"
   -
     :description: "<%= I18n.t(:'statuses.source.slightly_credible.description') %>"
     :id: slightly_credible
     :label: "<%= I18n.t(:'statuses.source.slightly_credible.label') %>"
     :style:
+        :backgroundColor: "green"
+        :color: "orange"
   -
     :description: "<%= I18n.t(:'statuses.source.sockpuppet.description') %>"
     :id: sockpuppet
     :label: "<%= I18n.t(:'statuses.source.sockpuppet.label') %>"
     :style:
+        :backgroundColor: "green"
+        :color: "orange"
