--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
 before_install:
 - export PATH=/tmp/bundler/ruby/2.3.0/bin:$PATH
 - export GEM_PATH=/tmp/bundler/ruby/2.3.0/gems:$GEM_PATH
-- openssl aes-256-cbc -K $encrypted_309dd1ea690c_key -iv $encrypted_309dd1ea690c_iv -in travis.zip.enc -out travis.zip -d
+- openssl aes-256-cbc -K $encrypted_e0d0d1748a78_key -iv $encrypted_e0d0d1748a78_iv -in travis.zip.enc -out travis.zip -d
 - unzip travis.zip
 - sudo apt-get -qq update
 - sudo apt-get install wget openjdk-7-jre redis-server
@@ -30,9 +30,7 @@ before_script:
 - cp config/initializers/secret_token.rb.example config/initializers/secret_token.rb
 - cp travis/database.yml config/database.yml
 - rm -rf tmp/cache tmp/cache1 tmp/cache2 tmp/cache3 && mkdir -p tmp/cache tmp/cache1 tmp/cache2 tmp/cache3
-- psql -c 'create database travis_ci_test;' -U postgres
-- RAILS_ENV=test bundle exec rake db:migrate
-- RAILS_ENV=test bundle exec rake parallel:setup
+- cd scripts && ./setup-parallel-env.sh && cd -
 script: 'bundle exec rake "parallel:test[3]"'
 rvm:
 - 2.3.4
