Ticket #6437: Performance improvements and GraphQL upgrade

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -21,7 +21,8 @@ engines:
     enabled: true
     config:
       languages:
-      - ruby
+        ruby:
+          mass_threshold: 19
   bundler-audit:
     enabled: true
 ratings:
