--- a/config/config.yml.example
+++ b/config/config.yml.example
@@ -54,6 +54,7 @@ development: &default
   cc_deville_token:
   cc_deville_httpauth:
   google_analytics_code: # Format: 'UA-000000000-1' 
+  optics_api_key: '' # Get one at https://optics.apollodata.com
 
 test:
   <<: *default
