--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: ruby
 services:
 - postgresql
+addons:
+  chrome: stable
 before_install:
 - export PATH=/tmp/bundler/ruby/2.3.0/bin:$PATH
 - export GEM_PATH=/tmp/bundler/ruby/2.3.0/gems:$GEM_PATH
-- openssl aes-256-cbc -K $encrypted_e0d0d1748a78_key -iv $encrypted_e0d0d1748a78_iv
-  -in travis.zip.enc -out travis.zip -d
+- openssl aes-256-cbc -K $encrypted_305bc6cf680a_key -iv $encrypted_305bc6cf680a_iv -in travis.zip.enc -out travis.zip -d
 - unzip travis.zip
 - sudo apt-get -qq update
 - sudo apt-get install wget openjdk-7-jre redis-server
@@ -13,6 +14,8 @@ before_install:
   && sudo dpkg -i --force-confnew elasticsearch-2.4.1.deb && sudo service elasticsearch
   restart
 - redis-server &
+- export NODE_PATH=$PWD/node_modules:$NODE_PATH
+- curl -sL https://deb.nodesource.com/setup_7.x | sudo -E bash - && sudo apt-get install -y nodejs && npm install chrome-remote-interface minimist
 cache:
   directories:
   - "/tmp/bundler"
