Ticket #6352: Send message in Slack thread when comment is created, if media link was shared in Slack channel

--- a/config/config.yml.example
+++ b/config/config.yml.example
@@ -55,6 +55,7 @@ development: &default
   cc_deville_httpauth:
   google_analytics_code: # Format: 'UA-000000000-1' 
   optics_api_key: '' # Get one at https://optics.apollodata.com
+  slack_token:
 
 test:
   <<: *default
