--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,7 +1,7 @@
 languages:
   Ruby: true
   JavaScript: false
-engines:
+plugins:
   fixme:
     enabled: false
   rubocop:
@@ -49,3 +49,31 @@ exclude_paths:
 - ".codeclimate.yml"
 - "cldr-data"
 - "data"
+exclude_patterns:
+- "**.js"
+version: "2"
+checks:
+  argument-count:
+    config:
+      threshold: 4
+  complex-logic:
+    config:
+      threshold: 4
+  file-lines:
+    config:
+      threshold: 250
+  method-complexity:
+    config:
+      threshold: 18
+  method-count:
+    config:
+      threshold: 50
+  method-lines:
+    config:
+      threshold: 30
+  nested-control-flow:
+    config:
+      threshold: 4
+  return-statements:
+    config:
+      threshold: 4
