--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_install:
 - redis-server &
 - export NODE_PATH=$PWD/node_modules:$NODE_PATH
 - curl -sL https://deb.nodesource.com/setup_7.x | sudo -E bash - && sudo apt-get install -y nodejs && npm install chrome-remote-interface minimist
+- LC_ALL=C google-chrome --headless --hide-scrollbars --remote-debugging-port=9333 --disable-gpu --no-sandbox --ignore-certificate-errors &
 cache:
   directories:
   - "/tmp/bundler"
