use a symlink instead of a mv op

--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -83,7 +83,7 @@ RUN /opt/bin/find_and_link_config_files.sh ${DEPLOYDIR}/latest
 RUN mkdir -p ${DEPLOYDIR}/shared/files/uploads \
     && ln -s ${DEPLOYDIR}/shared/files/uploads ${DEPLOYDIR}/latest/public/uploads
 
-RUN mv ./latest ./${APP}-$(date -I) && ln -s ./${APP}-$(date -I) ./current
+RUN ln -s ./latest ./${APP}-$(date -I) && ln -s ./${APP}-$(date -I) ./current
 
 #
 # RUNTIME ELEMENTS
