--- a/config/core_statuses.yml
+++ b/config/core_statuses.yml
@@ -3,6 +3,7 @@ MEDIA_CORE_VERIFICATION_STATUSES:
   -
     :description: "<%= I18n.t(:'statuses.media.undetermined.description') %>"
     :id: undetermined
+    :completed: ''
     :label: "<%= I18n.t(:'statuses.media.undetermined.label') %>"
     :style:
         :backgroundColor: "#518FFF"
@@ -10,6 +11,7 @@ MEDIA_CORE_VERIFICATION_STATUSES:
   -
     :description: "<%= I18n.t(:'statuses.media.not_applicable.description') %>"
     :id: not_applicable
+    :completed: '1'
     :label: "<%= I18n.t(:'statuses.media.not_applicable.label') %>"
     :style:
         :backgroundColor: "#9e9e9e"
@@ -17,6 +19,7 @@ MEDIA_CORE_VERIFICATION_STATUSES:
   -
     :description: "<%= I18n.t(:'statuses.media.in_progress.description') %>"
     :id: in_progress
+    :completed: ''
     :label: "<%= I18n.t(:'statuses.media.in_progress.label') %>"
     :style:
         :backgroundColor: "#ffbb5d"
@@ -24,6 +27,7 @@ MEDIA_CORE_VERIFICATION_STATUSES:
   -
     :description: "<%= I18n.t(:'statuses.media.not_true.description') %>"
     :id: "false"
+    :completed: '1'
     :label: "<%= I18n.t(:'statuses.media.not_true.label') %>"
     :style:
         :backgroundColor: "#f04747"
@@ -31,6 +35,7 @@ MEDIA_CORE_VERIFICATION_STATUSES:
   -
     :description: "<%= I18n.t(:'statuses.media.verified.description') %>"
     :id: verified
+    :completed: '1'
     :label: "<%= I18n.t(:'statuses.media.verified.label') %>"
     :style:
         :backgroundColor: "#72d18d"
